--- a/src/components/css/ValueContent.css
+++ b/src/components/css/ValueContent.css
@@ -4,6 +4,7 @@ main .value-content {
 }
 main .value-content .chart {
   max-width: 100px;
+  max-height: 50px;
 }
 main .value-content .card .wrapper-container{
   max-height: 120px;
