--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,32 @@ h6 {
   font-size: var(--heading-6);
   line-height: var(--heading-6);
 }
+.use-pc{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.9);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: none;
+}
+.use-pc .content{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 60px;
+}
+.use-pc .content .icon{
+  font-size: 120px;
+  color: #6fff7d;
+}
+.use-pc .content h2{
+  color: var(--white);
+}
+@media screen and (max-width: 1040px){
+  .use-pc{
+    display: flex;
+  }
+}
