--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -1,30 +1,17 @@
-main {
-  position: absolute;
-  left: 96px;
-  top: 70px;
-  right: 0;
-  bottom: 0;
-  padding: 20px;
-  background: var(--black-1);
-  transition: all 0.4s ease;
-}
-.sidebar:hover ~ main{
-  left: 236px;
-}
-main .content-container {
+.home .content-container {
   height: 100%;
   display: grid;
   grid-template-rows: 123fr 348fr 276fr;
   gap: 20px;
 }
-main .content {
+.home .content {
   display: grid;
   gap: 12px;
 }
-main .title {
+.home .title {
   font-weight: 400;
 }
-main .card {
+.home .card {
   background: linear-gradient(#232c34, #202730);
   padding: 15px;
   border-radius: 15px;
@@ -32,23 +19,23 @@ main .card {
   display: flex;
   flex-direction: column;
 }
-main .card h5 {
+.home .card h5 {
   color: var(--gray-2);
   font-size: 14px;
   line-height: 14px;
 }
-main .card .bar {
+.home .card .bar {
   width: 100%;
   height: 1px;
   background: var(--black-2);
   margin: 12px 0 18px 0;
 }
-main .card .card-content {
+.home .card .card-content {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-main .card .content-wrapper {
+.home .card .content-wrapper {
   width: 100%;
   height: 100%;
   overflow-y: scroll;
