--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,19 @@ h6 {
   font-size: var(--heading-6);
   line-height: var(--heading-6);
 }
+main {
+  position: absolute;
+  left: 96px;
+  top: 70px;
+  right: 0;
+  bottom: 0;
+  padding: 20px;
+  background: var(--black-1);
+  transition: all 0.4s ease;
+}
+.sidebar:hover ~ main {
+  left: 236px;
+}
 .use-pc{
   width: 100%;
   height: 100%;
